# tools-plugin_manager

./: CMakeLists.txt  manifest.xml
src/: CMakeLists.txt  PluginLoader.cpp  PluginLoader.hpp  PluginManager.hpp  plugin_manager.pc.in
test/: CMakeLists.txt  test_PluginLoader.cpp
test/plugin_loader_data/: FloatPlugin.cpp  StringPlugin.cpp
